--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,11 +7,17 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>{{title}}</title>
       <link rel="stylesheet" href="/stylesheets/style.css" />
+     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
+
    </head>
 
    <body>
 
-      {{{body}}}
+
+
+   {{{body}}}
 
       <script src="/js/script.js"></script>
       <script src="/js/financial-data.js" charset="utf-8"></script>
